--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         with C++, I have dabbled with native C++ and the windows API, and Unity/.Net Maui/Avalonia with
                         C#. Other languages I have dabbled in include C/AVR C, GLSL/HLSL, Rust, Python, though they are
                         not my most familiar languages, I do intent on increaing my familiarity with them in the near
-                        future. I'm more than willing to learn more language in the future if the opportunity arrises.
+                        future.
                     </p>
                 </div>
             </div>
