Slight Adjustment To Text.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                         Development at the Hogeschool van de Kunsten Utrech (HKU). Since beginning my development
                         journey I have developed a large interest in Performance including techniques such as
                         Multi-threading
-                        and Parallelism, Technology and Electronics such as Embedded Programming,
+                        and Parallelism, which I have been integrating into more of my work to improve the overal
+                        performance, Technology and Electronics such as Embedded Programming, this and performance focused elements such as Multi-Threading are
+                        two things I would like to learn more about and implement more in my upcoming projects,
                         Procedural Generation and Automation. My interests outside of Games and Development include
                         Music. I'm eager to learn, and won't stear away from a challenge.
                     </p>
