Updated Graphics Application To The Latest Version.

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                                 </p>
                                 <p class="mb-4 text-secondary">The terrain heightmap is generated using octave perlin
                                     noise, and utilizes multi-threading. The work gets divided over batches which is
-                                    based on the concurrency level.</p>
+                                    based on the concurrency level. The fog and sun are created using GLSL Shaders.</p>
                                 <p class="mb-4 text-secondary">This project is not yet finished.</p>
 
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
