Latest Up to date version of progress.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                         journey I have developed a large interest in Performance including techniques such as
                         Multi-threading
                         and Parallelism, which I have been integrating into more of my work to improve the overal
-                        performance, Technology and Electronics such as Embedded Programming, this and performance focused elements such as Multi-Threading are
+                        performance, Technology and Electronics such as Embedded Programming, this and performance
+                        focused elements such as Multi-Threading are
                         two things I would like to learn more about and implement more in my upcoming projects,
                         Procedural Generation and Automation. My interests outside of Games and Development include
                         Music. I'm eager to learn, and won't stear away from a challenge.
@@ -554,9 +555,11 @@
                                 <p class="mb-1 text-secondary">I am currently working on a C++ GLFW Project that
                                     utilizes Opengl and Glad to create an environment the player can traverse through.
                                 </p>
-                                <p class="mb-4 text-secondary">The terrain heightmap is generated using octave perlin
+                                <p class="mb-2 text-secondary">The terrain heightmap is generated using octave perlin
                                     noise, and utilizes multi-threading. The work gets divided over batches which is
                                     based on the concurrency level. The fog and sun are created using GLSL Shaders.</p>
+                                <p class="mb-4 text-secondary">You can load in .obj files into the application, though the .mlt file format does need to match for it to properly load Unfortunately.</p>
+
                                 <p class="mb-4 text-secondary">This project is not yet finished.</p>
 
                                 <button class="btn btn-primary" data-bs-dismiss="modal">
